--- a/index.html
+++ b/index.html
@@ -14,28 +14,32 @@
             background-color: blue;
             width: 15em;
             height: 10em;
-            top: 5em; left: 5em;
+            top: 5em; 
+            left: 5em;
         }
         .two {
             position: relative;
             background-color: red;
             width: 15em;
             height: 10em;
-            top: 10em; left: 12.5em;
+            top: 10em; 
+            left: 12.5em;
         }
         .three {
             position: relative;
             background-color: green;
             width: 15em;
             height: 10em;
-            top: 5em; left: 20em;
+            top: 5em; 
+            left: 20em;
         }
         .four {
             position: relative;
             background-color: yellow;
             width: 15em;
             height: 10em;
-            top: 0em; left: 27.5em;
+            top: 0em; 
+            left: 27.5em;
         }
     </style>
 </head>
