--- a/lesson23.part2.html
+++ b/lesson23.part2.html
@@ -14,13 +14,11 @@
 
 
         function square(sqr) {
-
-            let answer = Math.pow(sqr, 2);
-
-            return answer;
+            return Math.pow(sqr, 2);
         }
  
-        alert(square(input));
+        let res = square(input) 
+        alert(res);
 
     </script>
 </body>
